--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,15 +2,30 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
-  background: url(../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
+  .filelist {
+    float: left;
+    width: 40%;
+    height: 100%;
+    background-color: gray;
+    overflow-y: scroll;
+  }
 
-  .title {
-    color: white;
-    margin: 0;
-    padding: 50px 20px;
+  .filelist::-webkit-scrollbar {
+    display: block;
+    width: 6px;
+    background-color: white;
+  }
+
+  .filelist::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.333);
+  }
+
+  .showpart {
+    float: left;
+    width: 100%;
+    height: 100%;
+    background-color: goldenrod;
   }
 }
