Define some component and will rewrite the router

--- a/src/app/component/doctype/doctype.component.html
+++ b/src/app/component/doctype/doctype.component.html
@@ -1,5 +1,5 @@
-<div class="doctype-con">
-  <img src="assets/doctype/PNG.png" alt="doc-type">
+<div class="doctype-con" (click)="analyzeNow()">
+  <img src="assets/doctype/AVI.png" alt="doc-type">
   <div class="name-dir">
     <div class="name">{{name}}</div>
     <div class="dir">{{dir}}</div>
