--- a/src/app/component/doctype/doctype.component.css
+++ b/src/app/component/doctype/doctype.component.css
@@ -1,13 +1,14 @@
 .doctype-con {
   width: 100%;
   height: 54px;
-  padding: 3px;
+  padding: 3px 6px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: center;
   box-sizing: border-box;
-  background-color: bisque;
   margin: 2px 0;
+  border-bottom: 1px white solid;
 }
 
 
@@ -21,7 +22,9 @@ img {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
-  width: 100%;
+  width: 80%;
+  margin-left: 5px;
+  color: whitesmoke;
 }
 
 .name-dir > div {
@@ -31,10 +34,14 @@ img {
 .name {
   font-weight: 600;
   font-size: large;
+  width: 100%;
+  margin-right: 5px;
 }
 
 .dir {
+  width: 100%;
   font-weight: 300;
   font-size: smaller;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
