--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,7 +8,7 @@
     float: left;
     width: 40%;
     height: 100%;
-    background-color: gray;
+    background-color: rgb(71, 71, 71);
     overflow-y: scroll;
   }
 
