--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,28 +4,11 @@
   align-items: center;
   justify-content: flex-start;
 
-  .filelist {
-    float: left;
-    width: 40%;
-    height: 100%;
-    background-color: rgb(71, 71, 71);
-    overflow-y: scroll;
-  }
-
-  .filelist::-webkit-scrollbar {
-    display: block;
-    width: 6px;
-    background-color: white;
-  }
-
-  .filelist::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.333);
-  }
-
-  .showpart {
+  .filelist-con {
     float: left;
     width: 100%;
     height: 100%;
-    background-color: goldenrod;
+    background-color: rgb(71, 71, 71);
+    overflow: hidden;
   }
 }
