--- a/src/app/home/doctype/doctype.component.html
+++ b/src/app/home/doctype/doctype.component.html
@@ -1,5 +1,5 @@
-<div class="doctype-con" (click)="analyzeNow()">
-  <img src="assets/doctype/AVI.png" alt="doc-type">
+<div class="doctype-con">
+  <img src="assets/doctype/AVI.png" alt="doc-type" (click)="analyzeNow()">
   <div class="name-dir">
     <div class="name">{{name}}</div>
     <div class="dir">{{dir}}</div>
