fix the 'icon lost', add remove listener

--- a/src/app/home/doctype/doctype.component.html
+++ b/src/app/home/doctype/doctype.component.html
@@ -1,5 +1,5 @@
 <div class="doctype-con">
-  <img [src]="type" alt="doc-type" (click)="analyzeNow()">
+  <img [src]="iconDir" alt="doc-type" (click)="analyzeNow()">
   <div class="name-dir">
     <div class="name">{{name}}</div>
     <div class="dir">{{dir}}</div>
