--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-
   height: 100%;
 }
+
+@import "@angular/material/prebuilt-themes/pink-bluegrey.css";
